# doctor-crab

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
src/: main.rs
src/cli/: arguments.rs
src/resources/: analyze.rs  distro.rs  mod.rs
src/utils/: search.rs
