[package]
name = "doctor-crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = "1.9.0"
markdown-gen = "1.2.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
